# huebeat

./: .gitignore  Cargo.toml  README.md
app/: index.html  package-lock.json
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: config.rs  engine.rs  lib.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs
crates/audio-capture/: Cargo.toml
crates/audio-capture/src/: lib.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: lib.rs
crates/diag/: Cargo.toml
crates/diag/src/: main.rs
crates/effects/: Cargo.toml
crates/effects/src/: lib.rs
crates/genre/: Cargo.toml
crates/genre/src/: lib.rs
crates/hue-client/: Cargo.toml
crates/hue-client/src/: lib.rs
crates/hue-stream/: Cargo.toml
crates/hue-stream/src/: lib.rs
crates/osc-io/: Cargo.toml
crates/osc-io/src/: lib.rs
crates/palette/: Cargo.toml
crates/palette/src/: lib.rs
