[package]
name = "hue-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mdns-sd = "0.20.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "time", "net", "macros"] }
tracing.workspace = true
