[package]
name = "hue-stream"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-types = { path = "../core-types" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "time", "net", "macros"] }
tracing.workspace = true
webrtc-dtls = "0.12.0"
webrtc-util = "0.11"
